tests/compile_fail/transform_brace_arrow_hides_carrier.stderr
error[E0271]: type mismatch resolving `<Handler as TypedTransformHandler>::Output == First`
  --> tests/compile_fail/transform_brace_arrow_hides_carrier.rs:44:13
   |
44 |     let _ = obzenflow_dsl::transform!(Input -> { First, Second } => Handler);
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |             |
   |             type mismatch resolving `<Handler as TypedTransformHandler>::Output == First`
   |             required by a bound introduced by this call
   |
note: expected this to be `First`
  --> tests/compile_fail/transform_brace_arrow_hides_carrier.rs:35:19
   |
35 |     type Output = Output;
   |                   ^^^^^^
note: required by a bound in `__obzenflow_assert_handler_output_declares_every_arrow_member`
  --> tests/compile_fail/transform_brace_arrow_hides_carrier.rs:44:13
   |
44 |     let _ = obzenflow_dsl::transform!(Input -> { First, Second } => Handler);
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |             |
   |             required by a bound in this function
   |             required by this bound in `__obzenflow_assert_handler_output_declares_every_arrow_member`
   = note: this error originates in the macro `$crate::__obzenflow_transform_typed` which comes from the expansion of the macro `obzenflow_dsl::transform` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0271]: type mismatch resolving `<Handler as TypedTransformHandler>::Output == First`
  --> tests/compile_fail/transform_brace_arrow_hides_carrier.rs:44:13
   |
44 |     let _ = obzenflow_dsl::transform!(Input -> { First, Second } => Handler);
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |             |
   |             type mismatch resolving `<Handler as TypedTransformHandler>::Output == First`
   |             required by a bound introduced by this call
   |
note: expected this to be `First`
  --> tests/compile_fail/transform_brace_arrow_hides_carrier.rs:35:19
   |
35 |     type Output = Output;
   |                   ^^^^^^
note: required by a bound in `__obzenflow_assert_arrow_declares_every_handler_output_member`
  --> tests/compile_fail/transform_brace_arrow_hides_carrier.rs:44:13
   |
44 |     let _ = obzenflow_dsl::transform!(Input -> { First, Second } => Handler);
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |             |
   |             required by a bound in this function
   |             required by this bound in `__obzenflow_assert_arrow_declares_every_handler_output_member`
   = note: this error originates in the macro `$crate::__obzenflow_transform_typed` which comes from the expansion of the macro `obzenflow_dsl::transform` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0271]: type mismatch resolving `<TypedTransformHandlerAdapter<Handler> as TransformTyping>::Output == First`
  --> tests/compile_fail/transform_brace_arrow_hides_carrier.rs:44:13
   |
44 |     let _ = obzenflow_dsl::transform!(Input -> { First, Second } => Handler);
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |             |
   |             expected `First`, found `Output`
   |             required by a bound introduced by this call
   |
note: required by a bound in `assert_transform_contract`
  --> crates/obzenflow_runtime/src/typing.rs
   |
   | pub fn assert_transform_contract<H, In, Out>(_: &H)
   |        ------------------------- required by a bound in this function
   | where
   |     H: TransformTyping<Input = In, Output = Out>,
   |                                    ^^^^^^^^^^^^ required by this bound in `assert_transform_contract`
   = note: this error originates in the macro `$crate::__obzenflow_transform_typed` which comes from the expansion of the macro `obzenflow_dsl::transform` (in Nightly builds, run with -Z macro-backtrace for more info)
